--- a/.gitignore
+++ b/.gitignore
@@ -18,14 +18,14 @@
 # misc
 .DS_Store
 *.pem
-
+.env
+.env.dev
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
 
 # vercel
 .vercel
