--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@react-email/button": "0.0.10",
+    "@react-email/components": "0.0.6",
     "@react-email/html": "0.0.4",
     "@react-email/render": "0.0.7",
     "@types/node": "20.4.5",
@@ -36,11 +37,13 @@
     "jsonwebtoken": "^9.0.1",
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
+    "next-themes": "^0.2.1",
     "nodemailer": "^6.9.4",
     "nodemailer-smtp-transport": "^2.7.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "1.9.3",
     "react-hook-form": "^7.45.4",
     "react-query": "^3.39.3",
     "styled-components": "5.2",
@@ -49,9 +52,7 @@
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "zod": "^3.22.2",
-    "zustand": "^4.4.1",
-    "@react-email/components": "0.0.6",
-    "react-email": "1.9.3"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -59,6 +60,5 @@
     "@types/nodemailer": "^6.4.9",
     "@types/nodemailer-smtp-transport": "^2.7.5",
     "prisma": "^5.4.1"
-
   }
 }
